Fix Sorted Merge when row comparison throws instead of treating rows as equal
Signed-off-by: lance <leehaut@gmail.com>